--- a/src/Integration.UnitTests/packages.config
+++ b/src/Integration.UnitTests/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Castle.Core" version="3.3.3" targetFramework="net46" />
   <package id="EnvDTE" version="8.0.0" targetFramework="net46" />
   <package id="EnvDTE80" version="8.0.0" targetFramework="net46" />
   <package id="FluentAssertions" version="4.18.0" targetFramework="net46" />
@@ -26,6 +27,7 @@
   <package id="Microsoft.VisualStudio.Utilities" version="14.3.25407" targetFramework="net46" />
   <package id="Microsoft.VisualStudio.Validation" version="14.1.111" targetFramework="net46" />
   <package id="Microsoft.Web.Xdt" version="2.1.1" targetFramework="net46" />
+  <package id="Moq" version="4.5.30" targetFramework="net46" />
   <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net46" />
   <package id="NuGet.Core" version="2.12.0" targetFramework="net46" />
   <package id="NuGet.Versioning" version="3.4.3" targetFramework="net46" />
